<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/drawer_home"/>
        <item
                android:id="@+id/nav_reference"
                android:icon="@drawable/ic_help"
                android:title="@string/drawer_reference"/>
        <item
                android:id="@+id/nav_notes"
                android:title="@string/drawer_notes"
                android:icon="@drawable/ic_note"/>
    </group>
</menu>
