<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".HomeFragment">
    <TextView
            android:text="@string/worker_stopped_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/worker_info" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/worker_stopped_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/worker_toggle" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/worker_info" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/home_toggleWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/worker_toggle" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.110000014"
            tools:text="@string/home_toggleWarning" android:singleLine="false" android:gravity="center"/>
    <TextView
            android:text="@string/home_ringWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_ringText" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/worker_info" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/worker_toggle" app:layout_constraintVertical_bias="0.19"
            android:visibility="invisible"/>
</android.support.constraint.ConstraintLayout>